--- a/app/src/main/res/layout/adapter_my_orders.xml
+++ b/app/src/main/res/layout/adapter_my_orders.xml
@@ -7,8 +7,10 @@
     android:layout_height="wrap_content"
     android:background="@drawable/design_border_grey2"
     android:layout_margin="12dp"
+    android:id="@+id/orderWrapper"
     android:padding="8dp">
     <TextView
+        android:id="@+id/orderDrugName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -26,6 +28,7 @@
             android:textColor="@color/colorDarkBlue"
             android:text="Quantity: "/>
         <ImageView
+            android:id="@+id/orderQtyMinus"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:padding="3dp"
@@ -33,6 +36,7 @@
             app:srcCompat="@drawable/ic_remove_black_24dp"
             tools:ignore="ContentDescription"/>
         <TextView
+            android:id="@+id/orderQty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
@@ -41,6 +45,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"/>
         <ImageView
+            android:id="@+id/orderQtyAdd"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:padding="3dp"
@@ -49,6 +54,7 @@
             tools:ignore="ContentDescription"/>
     </LinearLayout>
     <TextView
+        android:id="@+id/orderDrugUnitPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -60,12 +66,12 @@
         android:layout_marginTop="4dp"
         android:background="@color/colorAshBg"/>
     <LinearLayout
-        android:id="@+id/closeDialogFrag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/orderTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -74,6 +80,7 @@
             android:text="Total: ₦120"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/orderRemoveFromCartBtn"
             android:background="@drawable/design_border_radius_grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
