--- a/app/src/main/res/layout/fragment_dialog_make_app.xml
+++ b/app/src/main/res/layout/fragment_dialog_make_app.xml
@@ -1,146 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
+    android:id="@+id/stRegisterWrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp"
+    android:padding="12dp"
     tools:context=".FragmentDialogMakeApp">
-    <RelativeLayout
-        android:id="@+id/stRegisterWrapper"
+    <LinearLayout
+        android:id="@+id/askQHeader"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginTop="2dp"
+        android:baselineAligned="false"
+        tools:ignore="UseCompoundDrawables">
+        <TextView
+            android:layout_width="0dp"
+            android:textAllCaps="true"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="@color/colorDarkBlue"
+            android:layout_height="wrap_content"
+            android:text="Book an appointment"
+            android:textStyle="bold"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"/>
+        <ImageView
+            android:id="@+id/closeDialogFrag"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/ic_close_black_24dp"
+            tools:ignore="ContentDescription"
+            />
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/askQBody"
+        android:layout_below="@id/askQHeader"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <LinearLayout
-            android:id="@+id/askQHeader"
-            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:layout_marginTop="2dp"
-            android:baselineAligned="false"
-            tools:ignore="UseCompoundDrawables">
+            android:orientation="vertical"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+
+
             <TextView
-                android:layout_width="0dp"
-                android:textAllCaps="true"
-                android:textSize="18sp"
-                android:layout_weight="1"
-                android:textColor="@color/colorDarkBlue"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Book an appointment"
+                android:textColor="@color/colorDarkBlue"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_marginRight="4dp"
-                android:layout_marginEnd="4dp"/>
-            <ImageView
-                android:id="@+id/instructionCloseDialog"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:srcCompat="@drawable/ic_close_black_24dp"
-                tools:ignore="ContentDescription"
-                />
-        </LinearLayout>
-
-        <ScrollView
-            android:id="@+id/askQBody"
-            android:layout_below="@id/askQHeader"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
+                android:layout_marginTop="6dp"
+                android:text="Doctor Speciality:"/>
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:focusable="true"
-                android:focusableInTouchMode="true">
-
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="6dp"
-                    android:text="Doctor Speciality:"/>
-                <RelativeLayout
+                style="@style/editTextStRegisterSpinner">
+                <Spinner
+                    android:id="@+id/addAppDocSpeciality"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/editTextStRegisterSpinner">
-                    <Spinner
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                </RelativeLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="6dp"
-                    android:text="Doctor Name:"/>
-                <RelativeLayout
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorDarkBlue"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="6dp"
+                android:text="Doctor Name:"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/editTextStRegisterSpinner">
+                <Spinner
+                    android:id="@+id/addAppDocName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/editTextStRegisterSpinner">
-                    <Spinner
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                </RelativeLayout>
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="6dp"
-                    android:text="Appointment Date:"/>
-                <EditText
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/design_border_grey"
-                    style="@style/editTextStRegister"
-                    tools:ignore="Autofill" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorDarkBlue"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="6dp"
-                    android:text="Symptoms:"/>
-                <EditText
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/design_border_grey"
-                    style="@style/editTextStRegister"
-                    tools:ignore="Autofill,LabelFor" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorDarkBlue"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="6dp"
+                android:text="Appointment Date:"/>
+            <EditText
+                android:id="@+id/addAppDate"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:background="@drawable/design_border_grey"
+                android:inputType="datetime"
+                style="@style/editTextStRegister"
+                tools:ignore="Autofill,LabelFor" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorDarkBlue"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="6dp"
+                android:text="Symptoms:"/>
+            <EditText
+                android:id="@+id/addAppSymptoms"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:background="@drawable/design_border_grey"
+                style="@style/editTextStRegister"
+                android:minLines="2"
+                android:maxLines="20"
+                tools:ignore="Autofill,LabelFor"/>
 
-                <TextView
-                    android:id="@+id/tapToRetry"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Submit Appointment"
-                    android:background="@drawable/design_border_radius_for_load_more"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="12dp"
-                    android:textStyle="bold"
-                    android:textColor="#FFF"
-                    android:padding="12dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Submit Appointment"
+                android:background="@drawable/design_border_radius_for_load_more"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="12dp"
+                android:textStyle="bold"
+                android:textColor="#FFF"
+                android:padding="12dp"/>
 
 
-            </LinearLayout>
+        </LinearLayout>
 
 
 
-        </ScrollView>
+    </ScrollView>
 
-    </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
