More Edits/Additions

--- a/app/src/main/res/layout/fragment_dialog_make_app.xml
+++ b/app/src/main/res/layout/fragment_dialog_make_app.xml
@@ -127,6 +127,7 @@
                 tools:ignore="Autofill,LabelFor"/>
 
             <TextView
+                android:id="@+id/addAppointmentBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Submit Appointment"
