--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -1,82 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ActivityMyOrders"
-    android:orientation="vertical"
-    android:padding="4dp">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#212121"
-        android:gravity="center_horizontal"
-        android:text="#My Orders"/>
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1px"
-        android:background="#bbb"
-        android:layout_margin="4dp"/>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_orders_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
+    android:layout_height="match_parent">
     <LinearLayout
-        android:id="@+id/no_data_tag"
+        android:layout_above="@id/order_footer"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".ActivityMyOrders"
         android:orientation="vertical"
-        android:gravity="center"
-        android:padding="8dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="Empty Cart"/>
-        <LinearLayout
-            android:id="@+id/addToCartBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/design_border_radius_for_load_more"
-            tools:ignore="UseCompoundDrawables"
-            android:gravity="center_vertical"
-            android:padding="12dp">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_add_shopping_cart_white_24dp"
-                tools:ignore="ContentDescription"/>
+        android:padding="4dp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#212121"
+            android:gravity="center_horizontal"
+            android:text="#My Orders"/>
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:background="#bbb"
+            android:layout_margin="4dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_orders_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+        <LinearLayout
+            android:id="@+id/no_data_tag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:padding="8dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="add to cart"
-                android:textStyle="bold"
-                android:textColor="#FFF"/>
-        </LinearLayout>
-        <TextView
-            android:id="@+id/tapToRetry2"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tap to Retry"
-            android:background="@drawable/design_border_radius_for_load_more"
-            android:textColor="#FFF"/>
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="Empty Cart"/>
+            <LinearLayout
+                android:id="@+id/addToCartBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/design_border_radius_for_load_more"
+                tools:ignore="UseCompoundDrawables"
+                android:gravity="center_vertical"
+                android:padding="12dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_add_shopping_cart_white_24dp"
+                    tools:ignore="ContentDescription"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="order drugs"
+                    android:textStyle="bold"
+                    android:textColor="#FFF"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tapToRetry2"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tap to Retry"
+                android:background="@drawable/design_border_radius_for_load_more"
+                android:textColor="#FFF"/>
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/order_footer"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:background="@color/colorPrimaryDark">
+        <TextView
+            android:id="@+id/totalPriceShow"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Total: ₦2399.00"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:textColor="@color/colorWhite"/>
+        <LinearLayout
+            android:id="@+id/checkoutBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Checkout "
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+                tools:ignore="ContentDescription"
+                android:layout_marginLeft="-10dp"
+                android:layout_marginStart="-10dp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+                tools:ignore="ContentDescription"
+                android:layout_marginLeft="-18dp"
+                android:layout_marginStart="-18dp" />
+
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
