--- a/app/src/main/res/layout/content_activity_home.xml
+++ b/app/src/main/res/layout/content_activity_home.xml
@@ -11,22 +11,43 @@
     android:padding="4dp">
     <!--tools:showIn="@layout/app_bar_activity_home"-->
 
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/adsu_logo1"
+        tools:ignore="ContentDescription"
+        android:layout_gravity="center_horizontal"/>
     <TextView
         android:id="@+id/welcomeMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textAllCaps="true"
         android:textStyle="bold"
         android:textColor="#212121"
         android:gravity="center_horizontal"
-        android:text="Welcome to ADSU final year online clearance platform"/>
-    <TextView
+        android:text="ADSU Hospital"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#777"
-        android:gravity="center_horizontal"
-        android:text="Click on each to clear yourself"/>
+        android:padding="8dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/design_border_grey2"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="#777"
+            android:gravity="start"
+            android:text="Search for drug..."/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_search_black_24dp"
+            tools:ignore="ContentDescription"/>
+    </LinearLayout>
 
 
     <View
@@ -36,62 +57,184 @@
         android:layout_margin="4dp"/>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/clearance_list_recyclerview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:padding="14dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_person_add_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="@color/colorWhite"
+            android:gravity="start"
+            android:text="Make Appointment"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginStart="-19sp"
+            android:layout_marginLeft="-19sp" />
+    </LinearLayout>
 
-    <ProgressBar
-        android:visibility="gone"
-        android:id="@+id/loadingProgressbar"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
     <LinearLayout
-        android:id="@+id/no_network_tag"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="8dp">
-        <TextView
+        android:layout_height="wrap_content"
+        android:padding="14dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="No network connection"/>
-        <LinearLayout
-            android:id="@+id/tapToRetry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:ignore="UseCompoundDrawables"
-            android:gravity="center_horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_menu_gallery"
-                tools:ignore="ContentDescription"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tap to retry"
-                android:padding="8dp"
-                android:textSize="16sp"
-                android:textColor="#616161"/>
-        </LinearLayout>
+            app:srcCompat="@drawable/ic_person_add_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp" />
         <TextView
-            android:id="@+id/tapToRetry2"
-            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="@color/colorWhite"
+            android:gravity="start"
+            android:text="My Appointments"/>
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tap to Retry"
-            android:background="@drawable/ic_menu_gallery"
-            android:padding="8dp"
-            android:textColor="#FFF"/>
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginStart="-19sp"
+            android:layout_marginLeft="-19sp" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="14dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_person_add_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="@color/colorWhite"
+            android:gravity="start"
+            android:text="Order Drugs"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginStart="-19sp"
+            android:layout_marginLeft="-19sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="14dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_person_add_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="@color/colorWhite"
+            android:gravity="start"
+            android:text="My Medical Report"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginStart="-19sp"
+            android:layout_marginLeft="-19sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="14dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_person_add_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:textColor="@color/colorWhite"
+            android:gravity="start"
+            android:text="View my order history"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginStart="-19sp"
+            android:layout_marginLeft="-19sp" />
     </LinearLayout>
 
 </LinearLayout>
