--- a/app/src/main/res/layout/fragment_dialog_login_register.xml
+++ b/app/src/main/res/layout/fragment_dialog_login_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/stRegisterWrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,20 +19,21 @@
         android:baselineAligned="false"
         tools:ignore="UseCompoundDrawables">
         <TextView
+            android:id="@+id/log_reg_title"
             android:layout_width="0dp"
             android:textAllCaps="true"
             android:textSize="18sp"
             android:layout_weight="1"
             android:textColor="@color/colorDarkBlue"
             android:layout_height="wrap_content"
-            android:text="Patient Registration"
+            android:text="Patient Login"
             android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"/>
         <ImageView
-            android:id="@+id/instructionCloseDialog"
+            android:id="@+id/closeDialogFrag"
             android:layout_width="30dp"
             android:layout_height="30dp"
             app:srcCompat="@drawable/ic_close_black_24dp"
@@ -52,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
+                android:id="@+id/regWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -77,6 +78,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
@@ -87,44 +89,52 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
+                        android:inputType="phone"
                         android:hint="mobile number" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:baselineAligned="false">
-                    <com.google.android.material.textfield.TextInputLayout
+                    android:baselineAligned="false"
+                    android:layout_gravity="center_vertical">
+                    <RelativeLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <com.google.android.material.textfield.TextInputEditText
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content">
+                        <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            style="@style/editTextStRegister"
-                            android:hint="age" />
-                    </com.google.android.material.textfield.TextInputLayout>
-                    <com.google.android.material.textfield.TextInputLayout
+                            android:layout_height="match_parent">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/reg_age"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                style="@style/editTextStRegister"
+                                android:inputType="number"
+                                android:hint="age" />
+                        </com.google.android.material.textfield.TextInputLayout>
+                    </RelativeLayout>
+                    <RelativeLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <com.google.android.material.textfield.TextInputEditText
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content">
+                        <Spinner
+                            android:id="@+id/reg_gender_spinner"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            style="@style/editTextStRegister"
-                            android:hint="gender" />
-                    </com.google.android.material.textfield.TextInputLayout>
+                            android:layout_height="wrap_content"/>
+                    </RelativeLayout>
                 </LinearLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_addr"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
@@ -137,6 +147,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reg_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
@@ -144,14 +155,15 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
+                    android:id="@+id/registerBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Register"
                     android:background="@color/colorPrimary"
-                    android:textColor="@color/colorAshBg"/>
+                    android:textColor="@color/colorWhite"/>
 
                 <TextView
-                    android:id="@+id/stAlreadyRegisteredBtn"
+                    android:id="@+id/alreadyRegisteredBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Already Registered?"
@@ -173,6 +185,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/logWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -197,6 +210,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/log_username_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
@@ -207,6 +221,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/log_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
@@ -214,6 +229,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
+                    android:id="@+id/loginBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Login"
@@ -221,6 +237,7 @@
                     android:textColor="@color/colorAshBg"/>
 
                 <TextView
+                    android:id="@+id/notRegisteredBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Not Registered?"
