--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#fafafa"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_above="@id/order_footer"
@@ -14,21 +15,6 @@
         tools:context=".ActivityMyOrders"
         android:orientation="vertical"
         android:padding="4dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="#212121"
-            android:gravity="center_horizontal"
-            android:text="#My Orders"/>
-
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1px"
-            android:background="#bbb"
-            android:layout_margin="4dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_orders_recyclerview"
