--- a/app/src/main/res/layout/adapter_my_orders.xml
+++ b/app/src/main/res/layout/adapter_my_orders.xml
@@ -72,7 +72,7 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/orderTotal"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
