--- a/app/src/main/res/layout/alert_dialog_payment_with_atm.xml
+++ b/app/src/main/res/layout/alert_dialog_payment_with_atm.xml
@@ -14,16 +14,15 @@
         android:padding="10dp"
         android:gravity="center_horizontal">
         <TextView
-            android:id="@+id/payment_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ADSU final year Library Clearance payment"
+            android:text="ADSU Hospital billing payment"
             android:textSize="18sp"
             android:gravity="center"
             android:textColor="#777"
             />
         <TextView
-            android:id="@+id/clearance_fee"
+            android:id="@+id/payment_total_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -193,7 +192,7 @@
             app:shape_cutCorner_bottomRightSize="3dp"
             android:layout_marginTop="8dp">
             <TextView
-                android:id="@+id/clearance_fee2"
+                android:id="@+id/payment_total_amount2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pay NGN 1000"
@@ -204,13 +203,46 @@
                 android:padding="16dp"/>
 
         </com.github.florent37.shapeofview.shapes.CutCornerView>
-        <ImageView
-            android:layout_marginTop="20dp"
-            android:layout_width="180dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/secured_by_paystack"
-            tools:ignore="ContentDescription"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
+            android:padding="16dp"
+            android:gravity="center">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1px"
+                android:background="#ccc"
+                android:layout_weight="1" />
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:padding="2dp"
+                app:srcCompat="@drawable/ic_lock_black_24dp"
+                tools:ignore="ContentDescription"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SECURED BY "
+                android:gravity="center_horizontal"
+                android:textColor="#aaa"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PAYSTACK"
+                android:gravity="center_horizontal"
+                android:textColor="#666"
+                android:textStyle="bold"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1px"
+                android:background="#ccc"
+                android:layout_weight="1" />
+        </LinearLayout>
 
 
     </LinearLayout>
