--- a/app/src/main/res/layout/app_bar_activity_home.xml
+++ b/app/src/main/res/layout/app_bar_activity_home.xml
@@ -23,11 +23,12 @@
     <include layout="@layout/content_activity_home" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/refreshPage"
+        android:id="@+id/orderDrugBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_menu_gallery" />
+        app:backgroundTint="@color/colorWhite"
+        app:srcCompat="@drawable/ic_add_white_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
