--- a/app/src/main/res/layout/fragment_dialog_login_register.xml
+++ b/app/src/main/res/layout/fragment_dialog_login_register.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f0f0f0"
-    android:padding="8dp"
+    android:padding="20dp"
     tools:context=".FragmentDialogLoginRegister">
     <LinearLayout
         android:id="@+id/askQHeader"
@@ -82,7 +82,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
-                        android:hint="full name" />
+                        android:hint="Full name" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
                         android:inputType="phone"
-                        android:hint="mobile number" />
+                        android:hint="Mobile number" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -116,7 +116,7 @@
                                 android:layout_height="wrap_content"
                                 style="@style/editTextStRegister"
                                 android:inputType="number"
-                                android:hint="age" />
+                                android:hint="Age" />
                         </com.google.android.material.textfield.TextInputLayout>
                     </RelativeLayout>
                     <RelativeLayout
@@ -138,7 +138,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
-                        android:hint="address"
+                        android:hint="Address"
                         android:minLines="2"
                         android:layout_gravity="top"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -151,7 +151,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
-                        android:hint="password" />
+                        android:hint="Password" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
@@ -214,7 +214,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
-                        android:hint="username or phone number" />
+                        android:hint="Username or Phone number" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -225,7 +225,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/editTextStRegister"
-                        android:hint="password" />
+                        android:hint="Password" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
