--- a/app/src/main/res/layout/fragment_dialog_view_doctors.xml
+++ b/app/src/main/res/layout/fragment_dialog_view_doctors.xml
@@ -1,14 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    android:id="@+id/stRegisterWrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentDialogViewDoctors">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/design_gradient_grey"
+    android:padding="12dp"
+    tools:context=".FragmentDialogViewApps">
+    <LinearLayout
+        android:id="@+id/askQHeader"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginTop="2dp"
+        android:baselineAligned="false">
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="16sp"
+                android:textColor="@color/colorRed"
+                android:layout_height="wrap_content"
+                android:text="::Check our Doctors"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginRight="4dp"
+                android:layout_marginEnd="4dp"
+                android:background="@drawable/design_bottom_border_red"/>
 
-</FrameLayout>
+        </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/closeDialogFrag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/design_border_radius_grey"
+            android:padding="6dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="12dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingEnd="12dp">
+
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:padding="3dp"
+                android:background="@drawable/design_circle_border_like_btn"
+                app:srcCompat="@drawable/ic_close_black_24dp"
+                tools:ignore="ContentDescription"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="close"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/askQBody"
+        android:layout_below="@id/askQHeader"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:background="#bbb"
+            android:layout_margin="4dp"/>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/doctors_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
+    </LinearLayout>
+
+</RelativeLayout>
