--- a/app/src/main/res/layout/activity_doctor_mgt.xml
+++ b/app/src/main/res/layout/activity_doctor_mgt.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/design_gradient_grey"
-    android:padding="12dp"
+    android:padding="4dp"
     tools:context=".ActivityDoctorMgt">
 
     <LinearLayout
@@ -28,6 +28,7 @@
             android:id="@+id/doctors_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scrollbars="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
