--- a/app/src/main/res/layout/alert_dialog_payment_with_atm.xml
+++ b/app/src/main/res/layout/alert_dialog_payment_with_atm.xml
@@ -214,7 +214,7 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="1px"
-                android:background="#ccc"
+                android:background="#bbb"
                 android:layout_weight="1" />
             <ImageView
                 android:layout_width="20dp"
@@ -240,7 +240,7 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="1px"
-                android:background="#ccc"
+                android:background="#bbb"
                 android:layout_weight="1" />
         </LinearLayout>
 
