--- a/app/src/main/res/layout/fragment_dialog_make_app.xml
+++ b/app/src/main/res/layout/fragment_dialog_make_app.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="12dp"
+    android:background="#fafafa"
     tools:context=".FragmentDialogMakeApp">
     <LinearLayout
         android:id="@+id/askQHeader"
@@ -18,26 +19,50 @@
         android:layout_marginTop="2dp"
         android:baselineAligned="false"
         tools:ignore="UseCompoundDrawables">
-        <TextView
+        <RelativeLayout
             android:layout_width="0dp"
-            android:textAllCaps="true"
-            android:textSize="18sp"
-            android:layout_weight="1"
-            android:textColor="@color/colorDarkBlue"
             android:layout_height="wrap_content"
-            android:text="Book an appointment"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginRight="4dp"
-            android:layout_marginEnd="4dp"/>
-        <ImageView
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:textAllCaps="true"
+                android:textSize="16sp"
+                android:textColor="@color/colorRed"
+                android:layout_height="wrap_content"
+                android:text="::MAKE APPOINTMENT"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginRight="4dp"
+                android:layout_marginEnd="4dp"
+                android:background="@drawable/design_bottom_border_red"/>
+
+        </RelativeLayout>
+        <LinearLayout
             android:id="@+id/closeDialogFrag"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:srcCompat="@drawable/ic_close_black_24dp"
-            tools:ignore="ContentDescription"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/design_border_radius_grey"
+            android:padding="6dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="12dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingEnd="12dp">
+
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:padding="3dp"
+                android:background="@drawable/design_circle_border_like_btn"
+                app:srcCompat="@drawable/ic_close_black_24dp"
+                tools:ignore="ContentDescription"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="close"/>
+        </LinearLayout>
     </LinearLayout>
 
     <ScrollView
@@ -100,14 +125,21 @@
                 android:textStyle="bold"
                 android:layout_marginTop="6dp"
                 android:text="Appointment Date:"/>
-            <EditText
+            <TextView
                 android:id="@+id/addAppDate"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:background="@drawable/design_border_grey"
-                android:inputType="datetime"
                 style="@style/editTextStRegister"
                 tools:ignore="Autofill,LabelFor" />
+            <!--<EditText-->
+                <!--android:id="@+id/addAppDate"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:background="@drawable/design_border_grey"-->
+                <!--android:inputType="datetime"-->
+                <!--style="@style/editTextStRegister"-->
+                <!--tools:ignore="Autofill,LabelFor" />-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
