--- a/app/src/main/res/layout/adapter_doctors_profile2.xml
+++ b/app/src/main/res/layout/adapter_doctors_profile2.xml
@@ -15,7 +15,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:padding="3dp"
-        app:srcCompat="@drawable/user"
+        app:srcCompat="@drawable/avater"
         tools:ignore="ContentDescription"/>
     <LinearLayout
         android:layout_width="wrap_content"
