--- a/app/src/main/res/layout/fragment_dialog_login_register.xml
+++ b/app/src/main/res/layout/fragment_dialog_login_register.xml
@@ -224,6 +224,7 @@
                         android:id="@+id/log_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="textPassword"
                         style="@style/editTextStRegister"
                         android:hint="Password" />
                 </com.google.android.material.textfield.TextInputLayout>
