--- a/app/src/main/res/layout/nav_header_activity_home.xml
+++ b/app/src/main/res/layout/nav_header_activity_home.xml
@@ -14,9 +14,9 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/adsu_logo1"
+        android:src="@drawable/avater"
         app:civ_border_width="4dp"
-        app:civ_border_color="#80000000"/>
+        app:civ_border_color="#80ffffff"/>
 
     <TextView
         android:id="@+id/nav_user_name"
